src/main/gen/dev/adnathanail/mirandaintellijplugin/language/parser/MirandaParser.java
// This is a generated file. Not intended for manual editing.
package dev.adnathanail.mirandaintellijplugin.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.adnathanail.mirandaintellijplugin.language.psi.MirandaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MirandaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return script(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(E_1, E_1_INFIX, E_1_PREFIX, E_1_SIMPLE),
    create_token_set_(TYPE, TYPENAME_ARGTYPE, TYPE_ARGTYPE, TYPE_NAME_TYPE,
      TYPE_TO_TYPE),
    create_token_set_(PAT, PAT_COLON_PAT, PAT_CONSTRUCT_FORMAL, PAT_CONSTRUCT_PAT,
      PAT_FORMAL, PAT_NUMERAL, PAT_PARENTHESIS_FORMAL, PAT_PLUS_PAT),
  };

  /* ********************************************************** */
  // identifier_lower '/' identifier_lower
  //     | identifier_upper '/' identifier_upper
  public static boolean aliase(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliase")) return false;
    if (!nextTokenIs(b, "<aliase>", IDENTIFIER_LOWER, IDENTIFIER_UPPER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIASE, "<aliase>");
    r = parseTokens(b, 0, IDENTIFIER_LOWER, SLASH, IDENTIFIER_LOWER);
    if (!r) r = parseTokens(b, 0, IDENTIFIER_UPPER, SLASH, IDENTIFIER_UPPER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // aliase+
  public static boolean aliases(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliases")) return false;
    if (!nextTokenIs(b, "<aliases>", IDENTIFIER_LOWER, IDENTIFIER_UPPER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIASES, "<aliases>");
    r = aliase(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!aliase(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aliases", c)) break;
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // exp ',' 'if'? exp
  public static boolean alt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALT, "<alt>");
    r = exp(b, l + 1);
    r = r && consumeToken(b, SEP_COMMA);
    r = r && alt_2(b, l + 1);
    r = r && exp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'if'?
  private static boolean alt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_2")) return false;
    consumeToken(b, IF);
    return true;
  }

  /* ********************************************************** */
  // typename
  //     | typevar
  //     | '(' type-list ')'
  //     | '[' type-list ']'
  public static boolean argtype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argtype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGTYPE, "<argtype>");
    r = typename(b, l + 1);
    if (!r) r = typevar(b, l + 1);
    if (!r) r = argtype_2(b, l + 1);
    if (!r) r = argtype_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' type-list ')'
  private static boolean argtype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argtype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && type_list(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' type-list ']'
  private static boolean argtype_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argtype_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && type_list(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' binding+ '}'
  public static boolean binder(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binder")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACE);
    r = r && binder_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, BINDER, r);
    return r;
  }

  // binding+
  private static boolean binder_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binder_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = binding(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!binding(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "binder_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // var '=' exp statement_ending
  //     | tform '==' type statement_ending
  public static boolean binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding")) return false;
    if (!nextTokenIs(b, "<binding>", IDENTIFIER_LOWER, OP_ZEROMORE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDING, "<binding>");
    r = binding_0(b, l + 1);
    if (!r) r = binding_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // var '=' exp statement_ending
  private static boolean binding_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = var(b, l + 1);
    r = r && consumeToken(b, OP_EQ);
    r = r && exp(b, l + 1);
    r = r && statement_ending(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tform '==' type statement_ending
  private static boolean binding_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = tform(b, l + 1);
    r = r && consumeToken(b, OP_DOUBLE_EQ);
    r = r && type(b, l + 1, -1);
    r = r && statement_ending(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'True' | 'False'
  public static boolean bool(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool")) return false;
    if (!nextTokenIs(b, "<bool>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL, "<bool>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // alt line_ending '=' cases
  //     | lastcase statement_ending
  public static boolean cases(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cases")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASES, "<cases>");
    r = cases_0(b, l + 1);
    if (!r) r = cases_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // alt line_ending '=' cases
  private static boolean cases_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cases_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = alt(b, l + 1);
    r = r && consumeTokens(b, 0, LINE_ENDING, OP_EQ);
    r = r && cases(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // lastcase statement_ending
  private static boolean cases_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cases_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lastcase(b, l + 1);
    r = r && statement_ending(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // constructor argtype*
  //     | type constructor type
  //     | '(' construct ')' argtype*
  public static boolean construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCT, "<construct>");
    r = construct_0(b, l + 1);
    if (!r) r = construct_1(b, l + 1);
    if (!r) r = construct_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // constructor argtype*
  private static boolean construct_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = constructor(b, l + 1);
    r = r && construct_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // argtype*
  private static boolean construct_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argtype(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "construct_0_1", c)) break;
    }
    return true;
  }

  // type constructor type
  private static boolean construct_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type(b, l + 1, -1);
    r = r && constructor(b, l + 1);
    r = r && type(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' construct ')' argtype*
  private static boolean construct_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && construct(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && construct_2_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // argtype*
  private static boolean construct_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct_2_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argtype(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "construct_2_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // identifier_upper
  public static boolean constructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor")) return false;
    if (!nextTokenIs(b, IDENTIFIER_UPPER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER_UPPER);
    exit_section_(b, m, CONSTRUCTOR, r);
    return r;
  }

  /* ********************************************************** */
  // construct '|' constructs
  //     | construct
  public static boolean constructs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructs")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCTS, "<constructs>");
    r = constructs_0(b, l + 1);
    if (!r) r = construct(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // construct '|' constructs
  private static boolean constructs_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructs_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = construct(b, l + 1);
    r = r && consumeToken(b, OP_OR);
    r = r && constructs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // def | tdef | spec | libdir | line_ending
  public static boolean decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL, "<decl>");
    r = def(b, l + 1);
    if (!r) r = tdef(b, l + 1);
    if (!r) r = spec(b, l + 1);
    if (!r) r = libdir(b, l + 1);
    if (!r) r = consumeToken(b, LINE_ENDING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // fnform '=' rhs| pat '=' rhs
  public static boolean def(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEF, "<def>");
    r = def_0(b, l + 1);
    if (!r) r = def_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // fnform '=' rhs
  private static boolean def_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = fnform(b, l + 1);
    r = r && consumeToken(b, OP_EQ);
    r = r && rhs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // pat '=' rhs
  private static boolean def_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat(b, l + 1, -1);
    r = r && consumeToken(b, OP_EQ);
    r = r && rhs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pathname binder? aliases?
  public static boolean env(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "env")) return false;
    if (!nextTokenIs(b, PATHNAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PATHNAME);
    r = r && env_1(b, l + 1);
    r = r && env_2(b, l + 1);
    exit_section_(b, m, ENV, r);
    return r;
  }

  // binder?
  private static boolean env_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "env_1")) return false;
    binder(b, l + 1);
    return true;
  }

  // aliases?
  private static boolean env_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "env_2")) return false;
    aliases(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // e1 | prefix1 | infix
  public static boolean exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXP, "<exp>");
    r = e1(b, l + 1, -1);
    if (!r) r = prefix1(b, l + 1);
    if (!r) r = infix(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // <<list exp>>
  public static boolean exps(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exps")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPS, "<exps>");
    r = list(b, l + 1, MirandaParser::exp);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // var_decl formal*
  //     | pat var_decl pat
  //     | '(' fnform ')' formal*
  public static boolean fnform(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FNFORM, "<fnform>");
    r = fnform_0(b, l + 1);
    if (!r) r = fnform_1(b, l + 1);
    if (!r) r = fnform_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // var_decl formal*
  private static boolean fnform_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = var_decl(b, l + 1);
    r = r && fnform_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // formal*
  private static boolean fnform_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!formal(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fnform_0_1", c)) break;
    }
    return true;
  }

  // pat var_decl pat
  private static boolean fnform_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat(b, l + 1, -1);
    r = r && var_decl(b, l + 1);
    r = r && pat(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' fnform ')' formal*
  private static boolean fnform_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && fnform(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && fnform_2_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // formal*
  private static boolean fnform_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fnform_2_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!formal(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fnform_2_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // var_decl
  //     | constructor
  //     | literal
  //     | '(' pat-list? ')'
  //     | '[' pat-list? ']'
  public static boolean formal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FORMAL, "<formal>");
    r = var_decl(b, l + 1);
    if (!r) r = constructor(b, l + 1);
    if (!r) r = literal(b, l + 1);
    if (!r) r = formal_3(b, l + 1);
    if (!r) r = formal_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' pat-list? ')'
  private static boolean formal_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && formal_3_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // pat-list?
  private static boolean formal_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_3_1")) return false;
    pat_list(b, l + 1);
    return true;
  }

  // '[' pat-list? ']'
  private static boolean formal_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && formal_4_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // pat-list?
  private static boolean formal_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formal_4_1")) return false;
    pat_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // pat-list '<-' exp
  //     | pat '<-' exp ',' exp '..'
  public static boolean generator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GENERATOR, "<generator>");
    r = generator_0(b, l + 1);
    if (!r) r = generator_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pat-list '<-' exp
  private static boolean generator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generator_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat_list(b, l + 1);
    r = r && consumeToken(b, OP_GENERATE);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // pat '<-' exp ',' exp '..'
  private static boolean generator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generator_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat(b, l + 1, -1);
    r = r && consumeToken(b, OP_GENERATE);
    r = r && exp(b, l + 1);
    r = r && consumeToken(b, SEP_COMMA);
    r = r && exp(b, l + 1);
    r = r && consumeToken(b, OP_DOTS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '++'|'--'|':'|'\/'|'&'|'>'|'>='|'='|'~+'|'<='|'<'|'+'|'-'|'*'|'/'|'div'|'mod'|'^'|'.'|'!'
  public static boolean infix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "infix")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INFIX, "<infix>");
    r = consumeToken(b, OP_DOUBLE_ADD);
    if (!r) r = consumeToken(b, OP_DOUBLE_MINUS);
    if (!r) r = consumeToken(b, COLON);
    if (!r) r = consumeToken(b, OP_BACK_FWD_SLASH);
    if (!r) r = consumeToken(b, OP_AND);
    if (!r) r = consumeToken(b, OP_GREATER);
    if (!r) r = consumeToken(b, OP_GREATER_EQUAL);
    if (!r) r = consumeToken(b, OP_EQ);
    if (!r) r = consumeToken(b, OP_SNAKE_ADD);
    if (!r) r = consumeToken(b, OP_SMALLER_EQUAL);
    if (!r) r = consumeToken(b, OP_SMALLER);
    if (!r) r = consumeToken(b, OP_ONEMORE);
    if (!r) r = consumeToken(b, OP_MINUS);
    if (!r) r = consumeToken(b, OP_ZEROMORE);
    if (!r) r = consumeToken(b, SLASH);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, OP_EXPONENT);
    if (!r) r = consumeToken(b, OP_DOT);
    if (!r) r = consumeToken(b, OP_NOT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // exp ',' 'if'? exp
  //     | exp ',' 'otherwise'
  public static boolean lastalt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastalt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LASTALT, "<lastalt>");
    r = lastalt_0(b, l + 1);
    if (!r) r = lastalt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // exp ',' 'if'? exp
  private static boolean lastalt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastalt_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exp(b, l + 1);
    r = r && consumeToken(b, SEP_COMMA);
    r = r && lastalt_0_2(b, l + 1);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'if'?
  private static boolean lastalt_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastalt_0_2")) return false;
    consumeToken(b, IF);
    return true;
  }

  // exp ',' 'otherwise'
  private static boolean lastalt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastalt_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exp(b, l + 1);
    r = r && consumeTokens(b, 0, SEP_COMMA, OTHERWISE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // lastalt whdefs?
  public static boolean lastcase(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastcase")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LASTCASE, "<lastcase>");
    r = lastalt(b, l + 1);
    r = r && lastcase_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // whdefs?
  private static boolean lastcase_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lastcase_1")) return false;
    whdefs(b, l + 1);
    return true;
  }
